@@ -9,7 +9,7 @@ using TypeOEngine.Typedeaf.Core.Interfaces;
 
 namespace SpaceInvader.Entities
 {
-    class Planet : Entity2d, IHasScene<SpaceScene>, IHasData<PlanetData>, IIsUpdatable, IHasGame<SpaceInvaderGame>
+    class Planet : Entity2d, IHasScene<SpaceScene>, IHasData<PlanetData>, IUpdatable, IHasGame<SpaceInvaderGame>
     {
         public DrawableTexture Drawable { get; set; }
         public bool Hidden { get; set; }
